--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-server": "2.1.1",
     "@ionic/storage": "1.1.6",
     "angularfire2": "^2.0.0-beta.6",
-    "firebase": "^3.6.2",
+    "firebase": "3.3.0",
     "ionic-angular": "2.0.0-rc.3",
     "ionic-native": "2.2.3",
     "ionicons": "3.0.0",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "0.0.46",
+    "@types/jasmine": "2.5.36",
     "@types/request": "0.0.30",
     "typescript": "2.0.6"
   },
